Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
5.4.0 Beta, 5.4.0
-
Windows 7 x64, MSVC 2013
-
3855015600418107485b31b0ec2bfa5b987787e7
Description
Hello there!
I have a problem with Qt5.4. I have QWebEngineView and some page with JS popup. I want open this popup in same QWebEngineView. In QWebView i just write in createWindow() "return this", but with QWebEngineView this not work.
But if i use QWebView instead of QWebEngineView everything works fine.
webview.h
#ifndef WEBVIEW_H #define WEBVIEW_H #include <QWebEngineView> class WebView : public QWebEngineView { Q_OBJECT public: explicit WebView(QWidget *parent = 0); private: QWebEngineView* createWindow(QWebEnginePage::WebWindowType); }; #endif // WEBVIEW_H
webview.cpp
#include "webview.h" WebView::WebView(QWidget *parent) : QWebEngineView(parent) { } QWebEngineView* WebView::createWindow(QWebEnginePage::WebWindowType) { return this; }
Attachments
Issue Links
- is duplicated by
-
QTBUG-50366 Cannot load Yandex search results
-
- Closed
-