Allow QWebEnginePage::createWindow to return this

Consider a QWebEnginePage subclass that does "return this;" in
createWindow. Commit 1f07d2929a made this a no-op to prevent QtWebEngine
from crashing. The reason for the crash was access to deleted memory
after destroying the current adapter in adoptNewWindow.
  Defer the adoption in this case to whenever we hit the event loop
again.

Change-Id: I9674d80ef8b2f301c1446ff505b2486649451ba6
Task-number: QTBUG-42216
Reviewed-by: Michal Klocek <michal.klocek@qt.io>